tests/baselines/reference/assignmentCompatPredicates12.errors.txt
tests/cases/compiler/assignmentCompatPredicates12.ts(22,5): error TS2322: Type 'PrivateMessage' is not assignable to type 'PrivateMessage2'.
  Either both sides have to use predicates, or not use predicates


==== tests/cases/compiler/assignmentCompatPredicates12.ts (1 errors) ====
    
    interface PrivateMessage {
        text?: string;
        userid?: number;
        screenname?: string;
        smthg?: number;
    } constrains {
        present(text);
    or(and(present(userid), not(present(screenname))),
        and(not(present(userid)), present(screenname)));
    not(present(smthg));
    }
    
    interface PrivateMessage2 {
        text?: string;
        userid?: number;
        screenname?: string;
        smthg?: number;
    }
    
    let pm1: PrivateMessage = {text: "Hi!", userid: 42};
    let pm2: PrivateMessage2 = pm1;
        ~~~
!!! error TS2322: Type 'PrivateMessage' is not assignable to type 'PrivateMessage2'.
!!! error TS2322:   Either both sides have to use predicates, or not use predicates